[package]
authors = ["liuhuo"]
edition = "2021"
name = "mproxy"
repository = "git@github.com:liuhuo23/mproxy.git"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
clap = {version = "4.5.1", features = ["derive"]}
log = "0.4.20"
log4rs = "1.3.0"
rustls = "0.22.2"
rustls-pemfile = "2.1.0"
tokio = {version = "1.36.0", features = ["full"]}
tokio-rustls = "0.25.0"
webparse = "0.2.6"
pki-types = { package = "rustls-pki-types", version = "1" }
